--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -33,11 +33,10 @@
     background-color: #f5f5f5;  
     display: flex;
     justify-content: center;
-
+    height: 100vh;
 }
 
 .bottom-content {
-    height: 800px;
     width: 50%;
     background-color: white;
     margin: 0 160px;
