--- a/backend/templates/form.html
+++ b/backend/templates/form.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Flask Test</title>
+    <title>Machine Learning Chinese Level Check</title>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 
