--- a/backend/templates/result.html
+++ b/backend/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>Flask Test</title>
+  <title>Machine Learning Chinese Level Check</title>
   <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
